sql/dd/impl/upgrade/server.cc
@@ -583,6 +583,7 @@ static bool check_tables(THD *thd, std::unique_ptr<Schema> &schema,
         }
       }
     }
+    DBUG_EXECUTE_IF("upgrade_failed_during_init", (*error_count)++;);
     return error_count->has_too_many_errors();
   };
 
