storage/innobase/log/log0chkp.cc
@@ -59,6 +59,7 @@ the file COPYING.Google.
 #include "log0log.h"
 #include "log0recv.h"
 #include "mem0mem.h"
+#include "mysqld.h"
 #include "srv0mon.h"
 #include "srv0srv.h"
 #include "srv0start.h"
@@ -447,7 +448,7 @@ void meb_log_print_file_hdr(byte *block) {
 
 #ifndef UNIV_HOTBACKUP
 
-void log_files_downgrade(log_t &log) {
+void log_files_downgrade(log_t &log, uint32_t log_format) {
   ut_ad(srv_shutdown_state.load() >= SRV_SHUTDOWN_LAST_PHASE);
   ut_a(!log_checkpointer_is_active());
 
@@ -461,7 +462,7 @@ void log_files_downgrade(log_t &log) {
       static_cast<page_no_t>(dest_offset / univ_page_size.physical());
 
   /* Write old version */
-  mach_write_to_4(buf + LOG_HEADER_FORMAT, LOG_HEADER_FORMAT_5_7_9);
+  mach_write_to_4(buf + LOG_HEADER_FORMAT, log_format);
 
   log_block_set_checksum(buf, log_block_calc_checksum_crc32(buf));
 
@@ -654,7 +655,7 @@ void log_create_first_checkpoint(log_t &log, lsn_t lsn) {
   page_no_t block_page_no;
   uint64_t block_offset;
 
-  ut_a(srv_is_being_started);
+  ut_a(srv_is_being_started || dd_init_failed_during_upgrade);
   ut_a(!srv_read_only_mode);
   ut_a(!recv_recovery_is_on());
   ut_a(buf_are_flush_lists_empty_validate());
